@@ -1,6 +1,9 @@
 # ChangeLog for dev-python/PyQt4
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/PyQt4/ChangeLog,v 1.207 2013/01/29 18:44:19 kensington Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/PyQt4/ChangeLog,v 1.208 2013/02/04 16:22:32 kensington Exp $
+
+  04 Feb 2013; Michael Palimaka <kensington@gentoo.org> PyQt4-4.9.6-r2.ebuild:
+  Use run_in_build_dir. Add python-3.3 support wrt bug #455020.
 
 *PyQt4-4.9.6-r2 (29 Jan 2013)
 
